[gd_scene load_steps=14 format=2]

[ext_resource path="res://addons/DialogEditor/icons/Remove.svg" type="Texture" id=1]
[ext_resource path="res://addons/DialogEditor/DialogGraphEditor/DialogGraphEditor.gd" type="Script" id=2]
[ext_resource path="res://addons/DialogEditor/icons/Add.svg" type="Texture" id=3]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxEmpty" id=10]

[node name="DialogGraphEditor" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSplitContainer" type="HSplitContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
split_offset = 714
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="HSplitContainer"]
margin_right = 812.0
margin_bottom = 600.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ToolBar" type="HBoxContainer" parent="HSplitContainer/VBoxContainer"]
margin_right = 812.0
margin_bottom = 20.0

[node name="DialogMenu" type="MenuButton" parent="HSplitContainer/VBoxContainer/ToolBar"]
margin_right = 52.0
margin_bottom = 20.0
text = "Dialog"
items = [ "Save All", null, 0, false, false, 0, 0, null, "", false, "Bake", null, 0, false, false, 1, 0, null, "", false ]

[node name="AddNodeMenu" type="MenuButton" parent="HSplitContainer/VBoxContainer/ToolBar"]
margin_left = 56.0
margin_right = 138.0
margin_bottom = 20.0
text = "Add Nodes"
items = [ "Dialog Start", null, 0, false, false, 0, 0, null, "", false, "Dialog Text", null, 0, false, false, 1, 0, null, "", false, "Dialog Branch", null, 0, false, false, 2, 0, null, "", false ]

[node name="TabContainer" type="TabContainer" parent="HSplitContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 812.0
margin_bottom = 582.0
size_flags_horizontal = 3
size_flags_vertical = 3
tab_align = 0
drag_to_rearrange_enabled = true

[node name="Debug" type="HBoxContainer" parent="HSplitContainer/VBoxContainer"]
margin_top = 586.0
margin_right = 812.0
margin_bottom = 600.0

[node name="Label" type="Label" parent="HSplitContainer/VBoxContainer/Debug"]
margin_right = 812.0
margin_bottom = 14.0
size_flags_horizontal = 3

[node name="Variables" type="VSplitContainer" parent="HSplitContainer"]
margin_left = 824.0
margin_right = 1024.0
margin_bottom = 600.0
rect_min_size = Vector2( 200, 200 )

[node name="Variables" type="TabContainer" parent="HSplitContainer/Variables"]
margin_right = 200.0
margin_bottom = 294.0
size_flags_horizontal = 3
size_flags_vertical = 3
tab_align = 0
drag_to_rearrange_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Editor" type="VBoxContainer" parent="HSplitContainer/Variables/Variables"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="HSplitContainer/Variables/Variables/Editor"]
margin_right = 192.0
margin_bottom = 16.0

[node name="AddVar" type="TextureButton" parent="HSplitContainer/Variables/Variables/Editor/HBoxContainer"]
margin_right = 16.0
margin_bottom = 16.0
texture_normal = ExtResource( 3 )

[node name="ScrollContainer" type="ScrollContainer" parent="HSplitContainer/Variables/Variables/Editor"]
margin_top = 20.0
margin_right = 192.0
margin_bottom = 258.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="EditorVar" type="VBoxContainer" parent="HSplitContainer/Variables/Variables/Editor/ScrollContainer"]
margin_right = 192.0
margin_bottom = 238.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tree" type="Tree" parent="HSplitContainer/Variables/Variables/Editor/ScrollContainer/EditorVar"]
margin_right = 192.0
margin_bottom = 238.0
size_flags_horizontal = 3
size_flags_vertical = 3
hide_root = true

[node name="Node" type="VBoxContainer" parent="HSplitContainer/Variables/Variables"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="HBoxContainer" type="HBoxContainer" parent="HSplitContainer/Variables/Variables/Node"]
margin_right = 192.0
margin_bottom = 16.0

[node name="AddVar_Node" type="Button" parent="HSplitContainer/Variables/Variables/Node/HBoxContainer"]
margin_right = 16.0
margin_bottom = 16.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
icon = ExtResource( 3 )

[node name="ScrollContainer" type="ScrollContainer" parent="HSplitContainer/Variables/Variables/Node"]
margin_top = 20.0
margin_right = 192.0
margin_bottom = 258.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HSplitContainer/Variables/Variables/Node/ScrollContainer"]
margin_right = 192.0
margin_bottom = 238.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Tree" type="Tree" parent="HSplitContainer/Variables/Variables/Node/ScrollContainer/VBoxContainer"]
margin_right = 192.0
margin_bottom = 238.0
size_flags_horizontal = 3
size_flags_vertical = 3
hide_root = true

[node name="VariablesSettings" type="TabContainer" parent="HSplitContainer/Variables"]
margin_top = 306.0
margin_right = 200.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
tab_align = 0

[node name="Inspektor" type="MarginContainer" parent="HSplitContainer/Variables/VariablesSettings"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="HSplitContainer/Variables/VariablesSettings/Inspektor"]
margin_right = 192.0
margin_bottom = 258.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="HSplitContainer/Variables/VariablesSettings/Inspektor/ScrollContainer"]
margin_right = 192.0
margin_bottom = 258.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 6

[node name="var" type="Label" parent="HSplitContainer/Variables/VariablesSettings/Inspektor/ScrollContainer/VBoxContainer"]
margin_right = 192.0
margin_bottom = 14.0
text = "Variable"
align = 1

[node name="VarName" type="HBoxContainer" parent="HSplitContainer/Variables/VariablesSettings/Inspektor/ScrollContainer/VBoxContainer"]
margin_top = 20.0
margin_right = 192.0
margin_bottom = 44.0

[node name="Label" type="Label" parent="HSplitContainer/Variables/VariablesSettings/Inspektor/ScrollContainer/VBoxContainer/VarName"]
margin_top = 5.0
margin_right = 42.0
margin_bottom = 19.0
text = "Name:"

[node name="Name" type="LineEdit" parent="HSplitContainer/Variables/VariablesSettings/Inspektor/ScrollContainer/VBoxContainer/VarName"]
margin_left = 46.0
margin_right = 172.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="Delete" type="Button" parent="HSplitContainer/Variables/VariablesSettings/Inspektor/ScrollContainer/VBoxContainer/VarName"]
margin_left = 176.0
margin_right = 192.0
margin_bottom = 24.0
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/focus = SubResource( 8 )
custom_styles/disabled = SubResource( 9 )
custom_styles/normal = SubResource( 10 )
icon = ExtResource( 1 )

[node name="Vartype" type="HBoxContainer" parent="HSplitContainer/Variables/VariablesSettings/Inspektor/ScrollContainer/VBoxContainer"]
margin_top = 50.0
margin_right = 192.0
margin_bottom = 70.0

[node name="Label" type="Label" parent="HSplitContainer/Variables/VariablesSettings/Inspektor/ScrollContainer/VBoxContainer/Vartype"]
margin_top = 3.0
margin_right = 34.0
margin_bottom = 17.0
text = "Type:"

[node name="Type" type="OptionButton" parent="HSplitContainer/Variables/VariablesSettings/Inspektor/ScrollContainer/VBoxContainer/Vartype"]
margin_left = 38.0
margin_right = 192.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Name"
items = [ "Name", null, false, 0, null, "String", null, false, 1, null, "Multiline String", null, false, 2, null, "Integer", null, false, 3, null, "float", null, false, 4, null, "bool", null, false, 5, null, "Texture", null, false, 6, null, "Sound", null, false, 7, null ]
selected = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AddGraphNode" type="HBoxContainer" parent="HSplitContainer/Variables/VariablesSettings/Inspektor/ScrollContainer/VBoxContainer"]
margin_top = 76.0
margin_right = 192.0
margin_bottom = 96.0
alignment = 1

[node name="AddGraphNode" type="Button" parent="HSplitContainer/Variables/VariablesSettings/Inspektor/ScrollContainer/VBoxContainer/AddGraphNode"]
margin_left = 37.0
margin_right = 154.0
margin_bottom = 20.0
text = "Add Graph Node"

[node name="val" type="Label" parent="HSplitContainer/Variables/VariablesSettings/Inspektor/ScrollContainer/VBoxContainer"]
margin_top = 102.0
margin_right = 192.0
margin_bottom = 116.0
text = "Value"
align = 1

[node name="Name" type="VBoxContainer" parent="HSplitContainer/Variables/VariablesSettings/Inspektor/ScrollContainer/VBoxContainer"]
visible = false
margin_top = 122.0
margin_right = 148.0
margin_bottom = 255.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="HSplitContainer/Variables/VariablesSettings/Inspektor/ScrollContainer/VBoxContainer/Name"]
margin_right = 148.0
margin_bottom = 16.0

[node name="Label" type="Label" parent="HSplitContainer/Variables/VariablesSettings/Inspektor/ScrollContainer/VBoxContainer/Name/HBoxContainer"]
margin_top = 1.0
margin_right = 128.0
margin_bottom = 15.0
size_flags_horizontal = 3
text = "Names:"

[node name="AddName" type="TextureButton" parent="HSplitContainer/Variables/VariablesSettings/Inspektor/ScrollContainer/VBoxContainer/Name/HBoxContainer"]
margin_left = 132.0
margin_right = 148.0
margin_bottom = 16.0
texture_normal = ExtResource( 3 )

[node name="MarginContainer" type="MarginContainer" parent="HSplitContainer/Variables/VariablesSettings/Inspektor/ScrollContainer/VBoxContainer/Name"]
margin_top = 20.0
margin_right = 148.0
margin_bottom = 133.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Names" type="VBoxContainer" parent="HSplitContainer/Variables/VariablesSettings/Inspektor/ScrollContainer/VBoxContainer/Name/MarginContainer"]
margin_right = 148.0
margin_bottom = 113.0

[node name="String" type="HBoxContainer" parent="HSplitContainer/Variables/VariablesSettings/Inspektor/ScrollContainer/VBoxContainer"]
margin_top = 122.0
margin_right = 192.0
margin_bottom = 146.0

[node name="Label" type="Label" parent="HSplitContainer/Variables/VariablesSettings/Inspektor/ScrollContainer/VBoxContainer/String"]
margin_top = 5.0
margin_right = 29.0
margin_bottom = 19.0
text = "text:"

[node name="LineEdit" type="LineEdit" parent="HSplitContainer/Variables/VariablesSettings/Inspektor/ScrollContainer/VBoxContainer/String"]
margin_left = 33.0
margin_right = 192.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="MultiLineString" type="VBoxContainer" parent="HSplitContainer/Variables/VariablesSettings/Inspektor/ScrollContainer/VBoxContainer"]
visible = false
margin_top = 142.0
margin_right = 148.0
margin_bottom = 255.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="HSplitContainer/Variables/VariablesSettings/Inspektor/ScrollContainer/VBoxContainer/MultiLineString"]
margin_right = 148.0
margin_bottom = 14.0
text = "Text:"

[node name="TextEdit" type="TextEdit" parent="HSplitContainer/Variables/VariablesSettings/Inspektor/ScrollContainer/VBoxContainer/MultiLineString"]
margin_top = 18.0
margin_right = 148.0
margin_bottom = 113.0
rect_min_size = Vector2( 0, 20 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="DeleteVariableDialog" type="ConfirmationDialog" parent="."]
margin_right = 200.0
margin_bottom = 70.0
window_title = "Bitte best√§tigen..."
dialog_text = "Delete Variable?"
[connection signal="tab_changed" from="HSplitContainer/VBoxContainer/TabContainer" to="." method="_on_TabContainer_tab_changed"]
[connection signal="tab_changed" from="HSplitContainer/Variables/Variables" to="." method="_on_VarTypeTab_tab_changed"]
[connection signal="pressed" from="HSplitContainer/Variables/Variables/Editor/HBoxContainer/AddVar" to="." method="_on_AddVar_pressed"]
[connection signal="cell_selected" from="HSplitContainer/Variables/Variables/Editor/ScrollContainer/EditorVar/Tree" to="." method="_on_Tree_cell_selected"]
[connection signal="pressed" from="HSplitContainer/Variables/Variables/Node/HBoxContainer/AddVar_Node" to="." method="_on_AddVar_Node_pressed"]
[connection signal="cell_selected" from="HSplitContainer/Variables/Variables/Node/ScrollContainer/VBoxContainer/Tree" to="." method="_on_Tree_cell_selected"]
[connection signal="text_entered" from="HSplitContainer/Variables/VariablesSettings/Inspektor/ScrollContainer/VBoxContainer/VarName/Name" to="." method="_on_Name_text_entered"]
[connection signal="pressed" from="HSplitContainer/Variables/VariablesSettings/Inspektor/ScrollContainer/VBoxContainer/VarName/Delete" to="." method="_on_Delete_pressed"]
[connection signal="item_selected" from="HSplitContainer/Variables/VariablesSettings/Inspektor/ScrollContainer/VBoxContainer/Vartype/Type" to="." method="_on_Type_item_selected"]
[connection signal="pressed" from="HSplitContainer/Variables/VariablesSettings/Inspektor/ScrollContainer/VBoxContainer/AddGraphNode/AddGraphNode" to="." method="_on_AddGraphNode_pressed"]
[connection signal="pressed" from="HSplitContainer/Variables/VariablesSettings/Inspektor/ScrollContainer/VBoxContainer/Name/HBoxContainer/AddName" to="." method="_on_AddName_pressed"]
[connection signal="confirmed" from="DeleteVariableDialog" to="." method="_on_DeleteVariableDialog_confirmed"]
